# rust-project-tpl

./: .env.example  .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  USAGE_ZH.md  cargo-generate.toml
.github/workflows/: ci.yml
config/: default.toml  development.toml  production.toml
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs
tests/: integration_test.rs
