[package]
name = "project-tpl"
version = "0.1.0"
edition = "2021"

[lib]
name = "project_tpl"
path = "src/lib.rs"

[[bin]]
name = "project-tpl"
path = "src/main.rs"

[dependencies]
# Command-line argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration management
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
